--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <div id="top1">
+        <div id="top1" class="icons">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="menu" height="32px"><title>menu</title><path d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z" /></svg>  
             <h2 id="name2">Mealthy</h2>
             <div id="search-magnify">
