--- a/Recipe/index.html
+++ b/Recipe/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peanut Butter Honey Ice Cream Cake</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="icon" type="image/x-icon" href="../Képek/194404.png">
+    <link rel="icon" type="image/x-icon" href="../Pictures/194404.png">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
         </div>
 
         <div id="picture">
-            <img src="../Képek/sssssssssssss.jpg" alt="recipe" height="150px">
+            <img src="../Pictures/sssssssssssss.jpg" alt="recipe" height="150px">
         </div>
 
         <div id="button-div">
@@ -91,7 +91,7 @@
         </div>
 
         <div>
-            <img src="../Képek/hellllllloooooooooo.jpg" alt="recipe" height="650px">
+            <img src="../Pictures/hellllllloooooooooo.jpg" alt="recipe" height="650px">
         </div>
 
     </main>
@@ -100,10 +100,10 @@
 
         <h2>Mealthy</h2>
 
-        <img src="../Képek/ajaj.png" alt="plate" height="150px">
+        <img src="../Pictures/ajaj.png" alt="plate" height="150px">
 
         <div id="cooking">
-            <img src="../Képek/beautiful-housewife-is-cooking-kitchen-illustration-vector-cartoon-animation-design_40876-2541.avif"cooking" height="300px">
+            <img src="../Pictures/beautiful-housewife-is-cooking-kitchen-illustration-vector-cartoon-animation-design_40876-2541.avif"cooking" height="300px">
         </div>
 
     </aside>
