--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Mealthy</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" type="image/x-icon" href="../Képek/194404.png">
 </head>
@@ -34,7 +34,7 @@
 
                 
             </div>
-            <img src="./Képek/Dinner-PNG-Clipart.png" alt="plate" height="170px" id="plate">
+            <img src="./Pictures/Dinner-PNG-Clipart.png" alt="plate" height="170px" id="plate">
         </div>
         <div id="top2">
             <div>
@@ -65,11 +65,11 @@
             </svg>
         </div>
         <div class="signup">
-            <a id="login" href="">Login</a>
-            <a id="register" href="">Register</a>
+            <a id="login" href="">Sign In</a>
+            <a id="register" href="">Sign Up</a>
         </div>
         <div id="cooking">
-            <img src="./Képek/beautiful-housewife-is-cooking-kitchen-illustration-vector-cartoon-animation-design_40876-2541.avif"cooking height="200px">
+            <img src="./Pictures/beautiful-housewife-is-cooking-kitchen-illustration-vector-cartoon-animation-design_40876-2541.avif"cooking height="200px">
         </div>
     </aside>
 
@@ -77,7 +77,7 @@
     <main>
             <div id="recipes-flex">
                 <div class="recipes-border">
-                    <img src="./Képek/Kép1.png" height="180px" alt="recipes" class="picture">
+                    <img src="./Pictures/Kép1.png" height="180px" alt="recipes" class="picture">
                     <div class="recipe-name">
                         <p>Peanut Butter Honey Ice Cream Cake</p>
                     </div>
@@ -110,7 +110,7 @@
                 </div>
 
                 <div class="recipes-border">
-                    <img src="./Képek/Kép1.png" height="180px" alt="recipes" class="picture">
+                    <img src="./Pictures/Kép1.png" height="180px" alt="recipes" class="picture">
                     <div class="picture-shadow">
 
                     </div>
@@ -146,7 +146,7 @@
                 </div>
 
                 <div class="recipes-border">
-                    <img src="./Képek/Kép1.png" height="180px" alt="recipes" class="picture">
+                    <img src="./Pictures/Kép1.png" height="180px" alt="recipes" class="picture">
                     <div class="picture-shadow">
 
                     </div>
@@ -182,7 +182,7 @@
                 </div>
 
                 <div class="recipes-border">
-                    <img src="./Képek/Kép1.png" height="180px" alt="recipes" class="picture">
+                    <img src="./Pictures/Kép1.png" height="180px" alt="recipes" class="picture">
                     <div class="picture-shadow">
 
                     </div>
@@ -218,7 +218,7 @@
                 </div>
 
                 <div class="recipes-border">
-                    <img src="./Képek/Kép1.png" height="180px" alt="recipes" class="picture">
+                    <img src="./Pictures/Kép1.png" height="180px" alt="recipes" class="picture">
                     <div class="picture-shadow">
 
                     </div>
@@ -254,7 +254,7 @@
                 </div>
 
                 <div class="recipes-border">
-                    <img src="./Képek/Kép1.png" height="180px" alt="recipes" class="picture">
+                    <img src="./Pictures/Kép1.png" height="180px" alt="recipes" class="picture">
                     <div class="picture-shadow">
 
                     </div>
@@ -290,7 +290,7 @@
                 </div>
 
                 <div class="recipes-border">
-                    <img src="./Képek/Kép1.png" height="180px" alt="recipes" class="picture">
+                    <img src="./Pictures/Kép1.png" height="180px" alt="recipes" class="picture">
                     <div class="picture-shadow">
 
                     </div>
@@ -326,7 +326,7 @@
                 </div>
 
                 <div class="recipes-border">
-                    <img src="./Képek/Kép1.png" height="180px" alt="recipes" class="picture">
+                    <img src="./Pictures/Kép1.png" height="180px" alt="recipes" class="picture">
                     <div class="picture-shadow">
 
                     </div>
@@ -362,7 +362,7 @@
                 </div>
 
                 <div class="recipes-border">
-                    <img src="./Képek/Kép1.png" height="180px" alt="recipes" class="picture">
+                    <img src="./Pictures/Kép1.png" height="180px" alt="recipes" class="picture">
                     <div class="picture-shadow">
 
                     </div>
@@ -398,7 +398,7 @@
                 </div>
 
                 <div class="recipes-border">
-                    <img src="./Képek/Kép1.png" height="180px" alt="recipes" class="picture">
+                    <img src="./Pictures/Kép1.png" height="180px" alt="recipes" class="picture">
                     <div class="picture-shadow">
 
                     </div>
@@ -434,7 +434,7 @@
                 </div>
 
                 <div class="recipes-border">
-                    <img src="./Képek/Kép1.png" height="180px" alt="recipes" class="picture">
+                    <img src="./Pictures/Kép1.png" height="180px" alt="recipes" class="picture">
                     <div class="picture-shadow">
 
                     </div>
@@ -470,7 +470,7 @@
                 </div>
 
                 <div class="recipes-border">
-                    <img src="./Képek/Kép1.png" height="180px" alt="recipes" class="picture">
+                    <img src="./Pictures/Kép1.png" height="180px" alt="recipes" class="picture">
                     <div class="picture-shadow">
 
                     </div>
@@ -506,7 +506,7 @@
                 </div>
 
                 <div class="recipes-border">
-                    <img src="./Képek/Kép1.png" height="180px" alt="recipes" class="picture">
+                    <img src="./Pictures/Kép1.png" height="180px" alt="recipes" class="picture">
                     <div class="picture-shadow">
 
                     </div>
@@ -542,7 +542,7 @@
                 </div>
 
                 <div class="recipes-border">
-                    <img src="./Képek/Kép1.png" height="180px" alt="recipes" class="picture">
+                    <img src="./Pictures/Kép1.png" height="180px" alt="recipes" class="picture">
                     <div class="picture-shadow">
 
                     </div>
